initial invoice support

--- a/etc/ooceapps.conf.dist
+++ b/etc/ooceapps.conf.dist
@@ -1,5 +1,7 @@
 {
     "MODULES" : {
+        "invoice": {
+        },
         "pkgstat" : {
             "logdir"    : "<path_to_logs>",
             "geoip_url" : "http://geolite.maxmind.com/download/geoip/database/GeoLiteCountry/GeoIP.dat.gz"
